<resources>
    <string name="app_name">Court Counter</string>
    <string name="action_settings">Settings</string>
    <string name="team_a">Team A</string>
    <string name="team_b">Team B</string>
    <string name="score_team_a">0</string>
    <string name="score_team_b">0</string>
    <string name="points_3">+3 Points</string>
    <string name="points_1">Free Throw</string>
    <string name="points_2">+2 Points</string>
    <string name="reset">RESET</string>
    <string name="football">Football</string>
    <string name="basketball">Basketball</string>
    <string name="touchdown">Touchdown</string>
    <string name="field_goal">Field Goal</string>
    <string name="football_2_points">2 pt. Conversion/Safety</string>
    <string name="add_one_point">+1 Point</string>
    <string name="change_sport">Change Sport</string>
</resources>
